--- a/yolo_config/dataset_condition_option.j2
+++ b/yolo_config/dataset_condition_option.j2
@@ -85,13 +85,34 @@ names: # Tuned to match coco (model trained with coco originally)
   
 path: /home/arvc/eeha/kaist-yolo-annotated/
 test:
+  {% if "all " == condition %}
+  - test-all-01/{option}/
+  - test-all-01-Seq/{option}/
+  - test-all-20/{option}/
+  {% elif "day " == condition %}
+  - test-day-01/{option}/
+  - test-day-20/{option}/
+  {% elif "night " == condition %}
+  - test-night-01/{option}/
+  - test-night-20/{option}/
+  {% endif %}
 train: 
-  - train-night-02/visible/
-  - train-night-04/visible/
-  - train-night-20/visible/
+  {% if "all " == condition %}
+  - train-all-01/{option}/
+  - train-all-02/{option}/
+  - train-all-04/{option}/
+  - train-all-20/{option}/
+  {% elif "day " == condition %}
+  - train-day-02/{option}/
+  - train-day-04/{option}/
+  - train-day-20/{option}/
+  {% elif "night " == condition %}
+  - train-night-02/{option}/
+  - train-night-04/{option}/
+  - train-night-20/{option}/
+  {% endif %}
 val: 
-  - test-night-01/visible/
-  - test-night-20/visible/
+  - test-all-01/{option}/
 
 
 
