--- a/yolo_config/dataset_condition_option.j2
+++ b/yolo_config/dataset_condition_option.j2
@@ -112,7 +112,17 @@ train:
   - train-night-20/{{option}}/
   {% endif %}
 val: 
+  {% if condition == "all" -%}
   - test-all-01/{{option}}/
+  {# - test-all-01-Seq/{{option}}/ -#}
+  - test-all-20/{{option}}/
+  {% elif condition == "day" -%}
+  - test-day-01/{{option}}/
+  - test-day-20/{{option}}/
+  {% elif condition == "night" -%}
+  - test-night-01/{{option}}/
+  - test-night-20/{{option}}/
+  {% endif %}
 
 
 
