--- a/yolo_config/dataset_condition_option.j2
+++ b/yolo_config/dataset_condition_option.j2
@@ -85,17 +85,7 @@ names: # Tuned to match coco (model trained with coco originally)
   
 path: {{data_path}}
 test:
-  {% if condition == "all" -%}
-  - test-all-01/{{option}}/
-  {# - test-all-01-Seq/{{option}}/ -#}
-  - test-all-20/{{option}}/
-  {% elif condition == "day" -%}
-  - test-day-01/{{option}}/
-  - test-day-20/{{option}}/
-  {% elif condition == "night" -%}
-  - test-night-01/{{option}}/
-  - test-night-20/{{option}}/
-  {% endif %}
+  # Test data is optional
 train: 
   {% if condition == "all" -%}
   - train-all-01/{{option}}/
