--- a/yolo_config/dataset_condition_option.j2
+++ b/yolo_config/dataset_condition_option.j2
@@ -88,22 +88,22 @@ test:
   # Test data is optional
 train: 
   {% if condition == "all" -%}
-  - train-all-01/{{option}}/
-  - train-all-02/{{option}}/
+  #- train-all-01/{{option}}/
+  #- train-all-02/{{option}}/
   - train-all-04/{{option}}/
-  - train-all-20/{{option}}/
+  #- train-all-20/{{option}}/
   {% elif condition == "day" -%}
   - train-day-02/{{option}}/
   - train-day-04/{{option}}/
-  - train-day-20/{{option}}/
+  #- train-day-20/{{option}}/
   {% elif condition == "night" -%}
   - train-night-02/{{option}}/
   - train-night-04/{{option}}/
-  - train-night-20/{{option}}/
+  #- train-night-20/{{option}}/
   {% endif %}
 val: 
   {% if condition == "all" -%}
-  - test-all-01/{{option}}/
+  #- test-all-01/{{option}}/
   {# - test-all-01-Seq/{{option}}/ -#}
   - test-all-20/{{option}}/
   {% elif condition == "day" -%}
