--- a/yolo_config/dataset_kaist_full_option.j2
+++ b/yolo_config/dataset_kaist_full_option.j2
@@ -11,29 +11,35 @@ test:
 train: 
   {% if condition == "all" -%}
   - train-all-01/{{option}}/
-  - train-all-02/{{option}}/
-  - train-all-04/{{option}}/
-  - train-all-20/{{option}}/
+  # Repeated images on them:
+  # - train-all-02/{{option}}/
+  # - train-all-04/{{option}}/
+  # - train-all-20/{{option}}/
   {% elif condition == "day" -%}
   - train-day-02/{{option}}/
-  - train-day-04/{{option}}/
-  - train-day-20/{{option}}/
+  # Repeated images on them:
+  # - train-day-04/{{option}}/
+  # - train-day-20/{{option}}/
   {% elif condition == "night" -%}
   - train-night-02/{{option}}/
-  - train-night-04/{{option}}/
-  - train-night-20/{{option}}/
+  # Repeated images on them:
+  # - train-night-04/{{option}}/
+  # - train-night-20/{{option}}/
   {% endif %}
 val: 
   {% if condition == "all" -%}
   - test-all-01/{{option}}/
   {# - test-all-01-Seq/{{option}}/ -#}
-  - test-all-20/{{option}}/
+  # Repeated images on them:
+  # - test-all-20/{{option}}/
   {% elif condition == "day" -%}
   - test-day-01/{{option}}/
-  - test-day-20/{{option}}/
+  # Repeated images on them:
+  # - test-day-20/{{option}}/
   {% elif condition == "night" -%}
   - test-night-01/{{option}}/
-  - test-night-20/{{option}}/
+  # Repeated images on them:
+  # - test-night-20/{{option}}/
   {% endif %}
 
 
