Big update, reordered fusion and dataset code. Included LLVIP dataset integration to generate YOLO compatible format

--- a/yolo_config/dataset_llvip_percent_option.j2
+++ b/yolo_config/dataset_llvip_percent_option.j2
@@ -1,7 +1,7 @@
 names:
   0: person
-  1: cyclist
-  2: people
+# 1: cyclist
+# 2: people
 ## Not enough cyclist nor people to train or validate. Too few instances of them in the images. 
 
   
